unpackaged/main/default/objects/AccountContactRelation/fields/Account_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_RecordType_Name__c</fullName>
    <formula>Account.RecordType.Name</formula>
    <label>Account RecordType Name</label>
    <type>Text</type>
</CustomField>