unpackaged/main/default/objects/AccountContactRelation/fields/American_Funds_F2_Signed__c.field-meta.xml
<CustomField>
    <fullName>American_Funds_F2_Signed__c</fullName>
    <label>American Funds F2 Signed</label>
    <type>Date</type>
</CustomField>