unpackaged/main/default/objects/AccountContactRelation/fields/Contact_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_Id__c</fullName>
    <formula>Contact.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Account Id</label>
    <type>Text</type>
</CustomField>