unpackaged/main/default/objects/AccountContactRelation/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contact.Account.FirstName + &#39; &#39; + Contact.Account.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>