unpackaged/main/default/objects/AccountContactRelation/fields/Current_New_Client_Flow_Run__c.field-meta.xml
<CustomField>
    <fullName>Current_New_Client_Flow_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current New Client Flow Run</label>
    <type>Checkbox</type>
</CustomField>