unpackaged/main/default/objects/AccountContactRelation/fields/Data_Update__c.field-meta.xml
<CustomField>
    <fullName>Data_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Update</label>
    <type>Checkbox</type>
</CustomField>