unpackaged/main/default/objects/AccountContactRelation/fields/IMA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>IMA_Signed_Date__c</fullName>
    <label>IMA Signed Date</label>
    <type>Date</type>
</CustomField>