unpackaged/main/default/objects/AccountContactRelation/fields/Interval_Fund_Signed__c.field-meta.xml
<CustomField>
    <fullName>Interval_Fund_Signed__c</fullName>
    <label>Interval Fund Signed</label>
    <type>Date</type>
</CustomField>