unpackaged/main/default/objects/AccountContactRelation/fields/Keep_or_Delete__c.field-meta.xml
<CustomField>
    <fullName>Keep_or_Delete__c</fullName>
    <description>Just for the salesforce data clean up project. Can delete once we are finished.</description>
    <label>Keep or Delete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>