unpackaged/main/default/objects/AccountContactRelation/fields/Person_FA_Team_Matches_HH_FA_Team__c.field-meta.xml
<CustomField>
    <fullName>Person_FA_Team_Matches_HH_FA_Team__c</fullName>
    <formula>IF(Account.Financial_Advisor_Team__c = Contact.Account.Financial_Advisor_Team__c, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person FA Team Matches HH FA Team</label>
    <type>Checkbox</type>
</CustomField>