unpackaged/main/default/objects/AccountContactRelation/fields/PerspectiveMigrationId__c.field-meta.xml
<CustomField>
    <fullName>PerspectiveMigrationId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>PerspectiveMigrationId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>