unpackaged/main/default/objects/AccountContactRelation/fields/Structure_Notes_Signed__c.field-meta.xml
<CustomField>
    <fullName>Structure_Notes_Signed__c</fullName>
    <label>Structure Notes Signed</label>
    <type>Date</type>
</CustomField>